--- a/childcare/baseapp/templates/home.html
+++ b/childcare/baseapp/templates/home.html
@@ -15,14 +15,11 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.7.2/semantic.min.css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <!-- range.css link -->
-    <link rel="stylesheet" type="text/css" href="./7Up Childcentres_files/range.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 
 
     <script type="text/javascript">$(document).ready(function () { $(".rating").rating({ maxRating: 5 }); });</script>
-    <script src="./7Up Childcentres_files/range.js.download"></script>
     <style>
         #jiawei {
             padding-left: 33px;
@@ -125,7 +122,7 @@
 
 <body data-gr-c-s-loaded="true" style="">
     <div class="ui inverted borderless menu" id="blackbox">
-        <a class="item large text" id="title" href="./7Up Home page.html">
+        <a class="item large text" id="title" href="./home.html">
             7UP Ch<i class="child icon" id="childicon"></i>ldcare
         </a>
         <div class="item right" id="search">
@@ -135,13 +132,13 @@
             </div>
         </div>
         <div class="right menu medium text">
-            <a class="item" href="./7Up Childcentres explore grid.html">
+            <a class="item" href="./explore grid.html">
                 <i class="compass outline icon"></i> Explore
             </a>
             <a class="item ">
                 <i class="map outline icon"></i> Maps
             </a>
-            <a class="item" href="./7Up subsidy page.html">
+            <a class="item" href="./subsidy.html">
                 <i class="dollar sign icon"></i> Subsidies
             </a>
 
