--- a/childcare/baseapp/templates/explore_list.html
+++ b/childcare/baseapp/templates/explore_list.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <!-- saved from url=(0136)https://trello-attachments.s3.amazonaws.com/5c5596aefb42bf03e7155b75/5c75f657c2ec4557701034e6/df03110f2cf738378aaea8ffced72911/test.html -->
 <html lang="en" class="gr__trello-attachments_s3_amazonaws_com">
@@ -108,32 +109,32 @@
 
 
 <body data-gr-c-s-loaded="true" style="">
-	<div class="ui inverted borderless menu">
-		<a class="item large text" id="title" href="./7Up Home page.html">
-			7UP Ch<i class="child icon" id="childicon"></i>ldcare
-		</a>
-		<div class="item right" id="search">
-			<div class="ui icon input">
-				<input type="text" placeholder="Search...">
-				<i class="search link icon"></i>
-			</div>
-		</div>
-		<div class="right menu medium text">
-			<a class="item" href="./7Up Childcentres.html">
-				<i class="compass outline icon"></i> Explore
-			</a>
-			<a class="item ">
-				<i class="map outline icon"></i> Maps
-			</a>
-			<a class="item" href="./7Up subsidy page.html">
-				<i class="dollar sign icon"></i> Subsidies
-			</a>
+	<div class="ui inverted borderless menu" id="blackbox">
+        <a class="item large text" id="title" href="{% url 'Homepage' %}">
+            7UP Ch<i class="child icon" id="childicon"></i>ldcare
+        </a>
+        <div class="item right" id="search">
+            <div class="ui icon input">
+                <input type="text" placeholder="Search...">
+                <i class="search link icon"></i>
+            </div>
+        </div>
+        <div class="right menu medium text">
+            <a class="item" href="{% url 'Explore_Grid' %}">
+                <i class="compass outline icon"></i> Explore
+            </a>
+            <a class="item" href="{%url 'maps' %}">
+                <i class="map outline icon"></i> Maps
+            </a>
+            <a class="item" href="{% url 'subsidy' %}">
+                <i class="dollar sign icon"></i> Subsidies
+            </a>
 
-			<a class="ui item">
-				<i class="object ungroup outline icon"></i> Compare
-			</a>
-		</div>
-	</div>
+            <a class="ui item">
+                <i class="object ungroup outline icon"></i> Compare
+            </a>
+        </div>
+    </div>
 	<div class="ui grid container">
 		<div class="ui four wide column">
 		</div>
@@ -465,11 +466,11 @@
 					<div class="column"></div>
 					<div class="column">
 						<div class="ui right floated left aligned menu" id="noBoxShadow">
-							<div class="header item">View by</div>
-							<a class="item " href="./7Up explore grid.html">Grid</a>
-							<a class="item active" href="./7Up explore list.html">List</a>
-							<a class="item">Map</a>
-						</div>
+                            <div class="header item">View by</div>
+                            <a class="item" id="grid" href="{% url 'Explore_Grid' %}">Grid</a>
+                            <a class="item active" id="list" href="{% url 'Explore_List' %}">List</a>
+                            <a class="item" id="map" href="{% url 'maps' %}">Map</a>
+                        </div>
 					</div>
 				</div>
 				<div class="row"></div>
