--- a/childcare/baseapp/templates/home.html
+++ b/childcare/baseapp/templates/home.html
@@ -122,7 +122,7 @@
 
 <body data-gr-c-s-loaded="true" style="">
     <div class="ui inverted borderless menu" id="blackbox">
-        <a class="item large text" id="title" href="./home.html">
+        <a class="item large text" id="title" href="{% url 'Homepage' %}">
             7UP Ch<i class="child icon" id="childicon"></i>ldcare
         </a>
         <div class="item right" id="search">
@@ -132,13 +132,13 @@
             </div>
         </div>
         <div class="right menu medium text">
-            <a class="item" href="./explore grid.html">
+            <a class="item" href="{% url 'Explore_Grid' %}">
                 <i class="compass outline icon"></i> Explore
             </a>
-            <a class="item ">
+            <a class="item" href="{%url 'maps' %}">
                 <i class="map outline icon"></i> Maps
             </a>
-            <a class="item" href="./subsidy.html">
+            <a class="item" href="{% url 'subsidy' %}">
                 <i class="dollar sign icon"></i> Subsidies
             </a>
 
@@ -147,7 +147,7 @@
             </a>
         </div>
     </div>
-
+{% endblock %}
     <div class="ui primary inverted segment" id="blackbox">
         <div class="ui grid center aligned" id="toppic">
             <div class="row"></div>
@@ -175,7 +175,7 @@
                             subsidies to help you with the cost of your child care.</h3>
                         <h1 class="ui header">We Make Bananas That Can Dance</h1>
                         <h3 class="ui header" id="textColorr">TO WATCH LIST:
-                            MOB PSYCHO 100 , THAT TIME I GOT REINCARNATED AS A SLIME, DORORO, HUNTERXHUNTER
+                            MOB PSYCHO 100 , THAT TIME I GOT REINCARNATED AS A SLIME, DORORO, HUNTERXHUNTER, RISE OF THE SHIELD HERO????
                         </h3>
                     </div>
                     <div class="seven wide right floated column">
