--- a/childcare/baseapp/templates/home.html
+++ b/childcare/baseapp/templates/home.html
@@ -3,106 +3,106 @@
 <html lang="en" class="gr__trello-attachments_s3_amazonaws_com">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>7Up Childcentres</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
-    <link rel="stylesheet" type="text/css"
-        href="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.7.2/semantic.min.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>7Up Childcentres</title>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
+	<link rel="stylesheet" type="text/css"
+		href="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.7.2/semantic.min.css">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 
 
-    <script type="text/javascript">$(document).ready(function () { $(".rating").rating({ maxRating: 5 }); });</script>
-    <style>
-        #jiawei {
-            padding-left: 33px;
-            margin: 0px;
-        }
+	<script type="text/javascript">$(document).ready(function () { $(".rating").rating({ maxRating: 5 }); });</script>
+	<style>
+		#jiawei {
+			padding-left: 33px;
+			margin: 0px;
+		}
 
-        #search {
-            width: 50%;
-        }
+		#search {
+			width: 50%;
+		}
 
-        #title {
-            margin: 10px;
-            margin-left: 30px;
-        }
+		#title {
+			margin: 10px;
+			margin-left: 30px;
+		}
 
-        #childicon {
-            margin: 0px;
-            padding: 0px;
-        }
+		#childicon {
+			margin: 0px;
+			padding: 0px;
+		}
 
-        .large.text {
-            font-size: 1.5rem;
-        }
+		.large.text {
+			font-size: 1.5rem;
+		}
 
-        .medium.text {
-            font-size: 1.2rem;
-        }
+		.medium.text {
+			font-size: 1.2rem;
+		}
 
-        #clearAllButton {
-            margin-left: 18px;
-        }
+		#clearAllButton {
+			margin-left: 18px;
+		}
 
-        #location {
-            width: 80%
-        }
+		#location {
+			width: 80%
+		}
 
-        #noBoxShadow {
-            box-shadow: none;
-        }
+		#noBoxShadow {
+			box-shadow: none;
+		}
 
-        #blackbox {
-            margin-top: 0px;
-            margin-bottom: 0px;
-            padding: 0px;
-        }
+		#blackbox {
+			margin-top: 0px;
+			margin-bottom: 0px;
+			padding: 0px;
+		}
 
-        #blackpadding {
-            height: 550px;
-        }
+		#blackpadding {
+			height: 550px;
+		}
 
-        #smolpadding {
-            height: 180px;
-        }
+		#smolpadding {
+			height: 180px;
+		}
 
-        #smolsmolpadding {
-            height: 100px;
-        }
+		#smolsmolpadding {
+			height: 100px;
+		}
 
-        #fontsize {
-            font-size: 70px;
-        }
+		#fontsize {
+			font-size: 70px;
+		}
 
-        #textColorr {
-            color: #4d4d4d
-        }
+		#textColorr {
+			color: #4d4d4d
+		}
 
-        #toppic {
-            width: 105%;
-            min-height: calc(70% - 100px);
-            height: 500px;
-            background-image: url("https://i.imgur.com/VFrQjz6.jpg");
-            background-size: cover;
-        }
+		#toppic {
+			width: 105%;
+			min-height: calc(70% - 100px);
+			height: 500px;
+			background-image: url("https://i.imgur.com/VFrQjz6.jpg");
+			background-size: cover;
+		}
 
-        #botpic {
-            width: 105%;
-            min-height: calc(70% - 100px);
-            height: 500px;
-            background-image: url("https://i.imgur.com/y5rpYcu.jpg");
+		#botpic {
+			width: 105%;
+			min-height: calc(70% - 100px);
+			height: 500px;
+			background-image: url("https://i.imgur.com/y5rpYcu.jpg");
 
-            background-size: cover;
-        }
-    </style>
+			background-size: cover;
+		}
+	</style>
 
 </head>
 <!--
@@ -121,72 +121,77 @@
 
 
 <body data-gr-c-s-loaded="true" style="">
-    <div class="ui inverted borderless menu" id="blackbox">
-        <a class="item large text" id="title" href="{% url 'Homepage' %}">
-            7UP Ch<i class="child icon" id="childicon"></i>ldcare
-        </a>
-        <div class="item right" id="search">
-            <div class="ui icon input">
-                <input type="text" placeholder="Search...">
-                <i class="search link icon"></i>
-            </div>
-        </div>
-        <div class="right menu medium text">
-            <a class="item" href="{% url 'Explore_Grid' %}">
-                <i class="compass outline icon"></i> Explore
-            </a>
-            <a class="item" href="{%url 'maps' %}">
-                <i class="map outline icon"></i> Maps
-            </a>
-            <a class="item" href="{% url 'subsidy' %}">
-                <i class="dollar sign icon"></i> Subsidies
-            </a>
+	<div class="ui inverted borderless menu" id="blackbox">
+		<a class="item large text" id="title" href="{% url 'Homepage' %}">
+			7UP Ch<i class="child icon" id="childicon"></i>ldcare
+		</a>
+		<div class="item right" id="search">
+			<div class="ui icon input">
+				<input type="text" placeholder="Search...">
+				<i class="search link icon"></i>
+			</div>
+		</div>
+		<div class="right menu medium text">
+			<a class="item" href="{% url 'Explore_Grid' %}">
+				<i class="compass outline icon"></i> Explore
+			</a>
+			<a class="item" href="{%url 'maps' %}">
+				<i class="map outline icon"></i> Maps
+			</a>
+			<a class="item" href="{% url 'subsidy' %}">
+				<i class="dollar sign icon"></i> Subsidies
+			</a>
 
-            <a class="ui item">
-                <i class="object ungroup outline icon"></i> Compare
-            </a>
-        </div>
-    </div>
-    <div class="ui primary inverted segment" id="blackbox">
-        <div class="ui grid center aligned" id="toppic">
-            <div class="row"></div>
-            <div class="ui inverted center aligned container header" id="fontsize">
-                The perfect childcare
-            </div>
-            <div class="row"></div>
-            <div class="ui inverted grid" id="smolsmolpadding"></div>
-            <h2>Early learning and Child Care Finder</h2>
+			<a class="ui item">
+				<i class="object ungroup outline icon"></i> Compare
+			</a>
+		</div>
+	</div>
 
-        </div>
-    </div>
+{% block content %}
+	<div class="ui primary inverted segment" id="blackbox">
+		<div class="ui grid center aligned" id="toppic">
+			<div class="row"></div>
+			<div class="ui inverted center aligned container header" id="fontsize">
+				The perfect childcare
+			</div>
+			<div class="row"></div>
+			<div class="ui inverted grid" id="smolsmolpadding"></div>
+			<h2>Early learning and Child Care Finder</h2>
 
-    <div class=" ui grid container">
-        <div class="ui column" id="smolsmolpadding"></div>
-        <div class="ui vertical stripe segment">
-            <div class="ui middle aligned stackable grid container">
-                <div class="row">
-                    <div class="ui vertical divider"></div>
-                    <div class="eight wide column">
-                        <h1 class="ui header">We are here to help you</h1>
-                        <h3 class="ui header" id="textColorr"> Early childhood learning centres provides the foundation
-                            for children to develop both educationally and socially.</h3>
-                        <h3 class="ui header" id="textColorr">The Singapore Government has provided a number of
-                            subsidies to help you with the cost of your child care.</h3>
-                        <h1 class="ui header">We Make Bananas That Can Dance</h1>
-                        <h3 class="ui header" id="textColorr">TO WATCH LIST:
-                            MOB PSYCHO 100 , THAT TIME I GOT REINCARNATED AS A SLIME, DORORO, HUNTERXHUNTER, RISE OF THE SHIELD HERO????
-                        </h3>
-                    </div>
-                    <div class="seven wide right floated column">
-                        <img src="https://i.imgur.com/vaGjqdx.jpg" class="ui large rounded image">
-                    </div>
-                </div>
-                <div class="row" id="smolsmolpadding"></div>
+		</div>
+	</div>
 
-            </div>
-        </div>
-    </div>
-    <div class="ui grid center aligned" id="botpic"></div>
+	<div class=" ui grid container">
+		<div class="ui column" id="smolsmolpadding"></div>
+		<div class="ui vertical stripe segment">
+			<div class="ui middle aligned stackable grid container">
+				<div class="row">
+					<div class="ui vertical divider"></div>
+					<div class="eight wide column">
+						<h1 class="ui header">We are here to help you</h1>
+						<h3 class="ui header" id="textColorr"> Early childhood learning centres provides the foundation
+							for children to develop both educationally and socially.</h3>
+						<h3 class="ui header" id="textColorr">The Singapore Government has provided a number of
+							subsidies to help you with the cost of your child care.</h3>
+						<h1 class="ui header">We Make Bananas That Can Dance</h1>
+						<h3 class="ui header" id="textColorr">TO WATCH LIST:
+							MOB PSYCHO 100 , THAT TIME I GOT REINCARNATED AS A SLIME, DORORO, HUNTERXHUNTER, RISE OF THE SHIELD
+							HERO????
+						</h3>
+					</div>
+					<div class="seven wide right floated column">
+						<img src="https://i.imgur.com/vaGjqdx.jpg" class="ui large rounded image">
+					</div>
+				</div>
+				<div class="row" id="smolsmolpadding"></div>
+
+			</div>
+		</div>
+	</div>
+	<div class="ui grid center aligned" id="botpic"></div>
+{% endblock %}
 
 </body>
+
 </html>
