--- a/childcare/baseapp/templates/home.html
+++ b/childcare/baseapp/templates/home.html
@@ -132,7 +132,7 @@
 			</div>
 		</div>
 		<div class="right menu medium text">
-			<a class="item" href="{% url 'Explore_Grid' %}">
+			<a class="item" href="{% url 'explore_grid' %}">
 				<i class="compass outline icon"></i> Explore
 			</a>
 			<a class="item" href="{%url 'maps' %}">
